# algorithmBase

./: CMakeLists.txt  README.md  main.cpp
cmake/: algorithmBaseConfig.cmake.in  config.cmake
include/: CovarianceIntersection.h  DataGenerator.h  DataPlot.h  DynamicModel.h  IdManagement.hpp  KalmanFilteringParameter.h  Log.h  NonCopyable.h  PolarCoordinates.h  Prototype.h  RelativeToAbsolute.h  Shape.h  Signal.hpp  Singleton.hpp  ThreadPool.h  Utils.h  algorithmBaseMath.h  eigen_types.h  file.h  flags.h  kalmanFiltering.h  pdaf.h  spd_log_helper.h  spdlogEigenFormatter.hpp  ukf.h
include/transforms3d/: transforms3d.h
src/: CovarianceIntersection.cpp  DataGenerator.cpp  DataPlot.cpp  DynamicModel.cpp  KalmanFilteringParameter.cpp  PolarCoordinates.cpp  RelativeToAbsolute.cpp  ThreadPool.cpp  Utils.cpp  file.cpp  flags.cpp  kalmanFiltering.cpp  pcdtool.cpp  pdaf.cpp  spd_log_helper.cpp  trans_forms_group.cpp  ukf.cpp
tests/: CMakeLists.txt  PolarCoordinatesTest.cpp  signalTest.cpp
